<resources>
    <string name="app_name">Game On Quiz</string>
    <string name="enter_name">Please enter your name</string>
    <string name="your_name">Your Name</string>
    <string name="name">Hello world</string>
    <string name="start">Start</string>
    <string name="ready_set_game_on">Ready, Set, Game On</string>
    <string name="hello_world">Hello world</string>
    <string name="welcome_text">Ready, Set, Game On!</string>
    <string name="sub_welcome">Start</string>
    <string name="your_name_enter">Your Name</string>
    <string name="name_input">Hello world</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="rugby">Rugby</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="boxing">Boxing</string>
    <string name="next">Next</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="_1_5">1/5</string>
    <string name="my_question_is">My Question is</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="todo">TODO</string>
    <string name="image">TODO</string>
    <string name="please_select_a_sport_category_to_begin">Please select a sport category to begin.</string>
    <string name="playername">Name</string>
    <string name="_0_5">0/5</string>
    <string name="view_last_user">View Last User</string>
    <string name="_0">0</string>
    <string name="results">Results</string>
    <string name="out_of_5">Out of 5</string>
    <string name="well_done">Well Done</string>
    <string name="try_again">Try Again?</string>
    <string name="try_again_2">Try Again?</string>
    <string name="go_home">Go Home</string>
    <string name="btn_start">TODO</string>
    <string name="enter_name_input">Enter Name</string>
    <string name="cv_username">TODO</string>
    <string name="_10">10</string>
    <string name="football_title">Football</string>
    <string name="basketball_ttl">Basketball</string>
    <string name="_10_countdown">10</string>
    <string name="question_1">Question 1</string>
    <string name="question_1_of_5">Question 1 of 5</string>
    <string name="boxing_title">Boxing</string>
    <string name="football_ttl">Football</string>
    <string name="rugby_title">Rugby</string>
    <string name="logo_welcome">TODO</string>
    <string name="please_select_a_category">Please select a category to begin</string>
    <string name="basketballbtn">TODO</string>
    <string name="boxingbtn">TODO</string>
    <string name="footballbtn">TODO</string>
    <string name="rugbybtn">TODO</string>
    <string name="high_scores">High Scores</string>
    <string name="open_youtube">Open YouTube</string>
    <string name="reset_high_scores">Reset High Scores</string>
    <string name="settings">TODO</string>
    <string name="github">Github</string>
    <string name="gameon_version_1_1">GameOn Version 1.1</string>
    <string name="developed_by_tristan_storm">Developed by Tristan Storm</string>
    <string name="gameon_is_a_thrilling_quiz_app_that_challenges_your_knowledge_in_various_sports_categories_put_your_sports_knowledge_to_the_test_as_you_compete_to_earn_the_highest_score_whether_you_re_a_die_hard_sports_fan_or_just_looking_to_learn_more_about_your_favorite_games_gameon_has_something_for_everyone">GameOn is a thrilling quiz app that challenges your knowledge in various sports categories. Put your sports knowledge to the test as you compete to earn the highest score. Whether you\'re a die-hard sports fan or just looking to learn more about your favorite games, GameOn has something for everyone.</string>
    <string name="button">Button</string>
    <string name="homebtnimg">TODO</string>
</resources>