<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="250dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/enter_name_input"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="@color/placeholder"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <ImageButton
            android:id="@+id/btn_start"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_marginStart="255dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/btn_start"
            app:srcCompat="@drawable/next"
            tools:ignore="RedundantDescriptionCheck,VisualLintBounds,DuplicateSpeakableTextCheck" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="331dp"
        android:layout_height="240dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/logo_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>